try to follow guideline for css names (id, class, etc...) correct a bug in z-index of drawing canvas

--- a/public/stylesheets/wb-default-theme.css
+++ b/public/stylesheets/wb-default-theme.css
@@ -1,6 +1,6 @@
 body {  }
 
-#toolPalette {
+#wb-toolpalette {
     position: fixed;
     top: 50px;
     left: 10px;
@@ -13,7 +13,7 @@ body {  }
     -webkit-border-radius: 10px
 }
 
-.WBSelected {
+.wb-selected-object {
 	  	-moz-border-radius: 5px;
 		-webkit-border-radius: 5px;
 		border: 5px solid #AAAAAA;
